--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1174,10 +1174,20 @@
     "escapeCarriageReturn": "Carriage return (CR - old Mac style)",
     "escapeTab": "Tab character",
     "escapeBackslash": "Literal backslash",
+    "optionsTitle": "Options",
+    "caseSensitiveTitle": "Case Sensitive",
+    "caseSensitiveDesc": "When enabled, 'Hello' and 'hello' are treated as different. When disabled, both will match.",
+    "caseSensitiveTooltip": "Toggle case sensitivity",
+    "caseSensitiveShort": "Aa",
+    "regexTitle": "Regular Expression",
+    "regexDesc": "Enable to use regex patterns for advanced matching. Use $1, $2 in replacement for capture groups.",
+    "regexTooltip": "Toggle regex mode",
+    "regexShort": ".*",
     "examples": "Examples",
     "exampleTypo": "(fix typo)",
     "exampleParagraph": "(double-space after periods)",
     "exampleFormal": "(formal style)",
+    "exampleRegex": "(remove repeated words)",
     "noteTitle": "Note:",
     "noteContent": "For Windows line endings conversion, consider using the 'Convert LF to CRLF' option in Advanced settings instead — it handles this automatically for clipboard paste operations.",
     "fromPlaceholder": "Find text...",
