--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -12,7 +12,45 @@
     "postProcessing": "Постобработка",
     "history": "История",
     "debug": "Отладка",
-    "about": "О программе"
+    "about": "О программе",
+    "textReplacement": "Замена текста",
+    "transcribeFile": "Транскрипция файла",
+    "voiceCommands": "Голосовые команды",
+    "aiReplace": "AI Замена",
+    "browserConnector": "Коннектор браузера",
+    "audioProcessing": "Обработка речи"
+  },
+  "textReplacement": {
+    "cleanupTitle": "Очистка речи",
+    "cleanupDescription": "Автоматическое удаление артефактов речи из итогового текста."
+  },
+  "audioProcessing": {
+    "title": "Обработка аудио",
+    "description": "Управление обработкой и фильтрацией аудио во время транскрипции.",
+    "fillerFilter": "Удалять слова-паразиты",
+    "fillerFilterDescription": "Автоматически удалять «эм», «ну» и подобные слова-паразиты из транскрипции.",
+    "fillerHelpTitle": "Подробнее об удалении слов-паразитов",
+    "whatItDoes": "Что это делает",
+    "fillerExplanation": "Эта функция автоматически удаляет распространенные слова-паразиты и артефакты речи:",
+    "fillerWords": "Слова-паразиты:",
+    "hallucinations": "Галлюцинации:",
+    "stutters": "Заикания:",
+    "noteTitle": "Примечание:",
+    "fillerNote": "Особенно полезно с ИИ-моделями вроде Parakeet, которые могут выдавать слова-паразиты или артефакты заикания.",
+    "vadThreshold": "Чувствительность голоса",
+    "moreSensitive": "Чувствительнее",
+    "lessSensitive": "Менее чувствительно",
+    "vadHelpTitle": "Подробнее о чувствительности",
+    "vadExplanation": "Обнаружение активности голоса (VAD)",
+    "vadDescription": "VAD определяет, когда вы говорите, а когда — тишина или шум.",
+    "lowThreshold": "Низкий (По умолчанию)",
+    "lowThresholdDesc": "Очень чувствительно — захватывает тихую речь, но может захватить шум.",
+    "midThreshold": "Средний",
+    "midThresholdDesc": "Сбалансированно — уменьшает шум, сохраняя речь.",
+    "highThreshold": "Высокий",
+    "highThresholdDesc": "Консервативно — только четкая речь. Уменьшает заикания.",
+    "tipTitle": "Совет:",
+    "vadTip": "Если возникают заикания («ч-ч-что»), увеличьте до 0.5-0.6."
   },
   "onboarding": {
     "subtitle": "Для начала выберите модель транскрипции",
