--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -22,7 +22,9 @@
   },
   "textReplacement": {
     "cleanupTitle": "Очистка речи",
-    "cleanupDescription": "Автоматическое удаление артефактов речи из итогового текста."
+    "cleanupDescription": "Автоматическое удаление артефактов речи из итогового текста.",
+    "beforeLlm": "Применять перед постобработкой LLM",
+    "beforeLlmDescription": "Если включено, замена текста применяется ДО обработки LLM. Это предотвращает изменение LLM ваших шаблонов замены."
   },
   "audioProcessing": {
     "title": "Обработка аудио",
