--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -162,7 +162,10 @@
         "descriptionUnsupported": "Модель Parakeet автоматически определяет язык. Ручной выбор не требуется.",
         "searchPlaceholder": "Поиск языков...",
         "noResults": "Языки не найдены",
-        "auto": "Авто"
+        "auto": "Авто",
+        "followOsInput": "По раскладке клавиатуры",
+        "followOsInputHint": "Определяется по завершении записи",
+        "followOsInputTooltip": "Язык определяется по текущей раскладке клавиатуры в момент начала транскрипции. Вы можете менять раскладку даже во время записи — будет использован язык, активный в момент остановки записи."
       },
       "pushToTalk": {
         "label": "Нажми и говори",
